# wut-cuda-orb-slam3

./: .clang-format  .gitignore  CMakeLists.txt  CameraTrajectory.txt  Examples  Examples_old  ExecMean.txt  LBA_Stats.txt  LocalMapTimeStats.txt  README.md  SessionInfo.txt  TrackingTimeStats.txt  datasets  f_dataset-MH01_stereo.txt  full_cpu.csv  kf_dataset-MH01_stereo.txt  measurement.csv  out.csv  run.sh
cmake_modules/: PangolinConfig.cmake
gpu/: tx1.cpp  tx1_deviceQuery_output
include/: Config.h  Converter.h  Frame.h  FrameDrawer.h  G2oTypes.h  ImuTypes.h  KeyFrame.h  Map.h  MapPoint.h  ORBextractor.h  Settings.h  System.h  Test_t.h  Tracking.h  Viewer.h
include/Eden_resources/: Ngpus_Ncpus.h
include/OpenCL/: CvVector.hpp  Fast.hpp  Manager.hpp  Orb.hpp
include/OpenCL/Kernel/: bit_pattern_31.cl  c_table.cl  key_point.hpp
include/Util/: CSVLogger.h  Time.h
include/cuda/: Cuda.hpp  Fast.hpp  Orb.hpp
include/cudatest/: cudatest.h
include/orb/: Benchmark.h
scripts/: ninja.sh  run.sh
src/: Atlas.cc  Frame.cc  ImuTypes.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  LoopClosing1.cc  LoopClosing2.cc  LoopClosing3.cc  MLPnPsolver.cpp  Map.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  ORBmatcher1.cc  ORBmatcher2.cc  ORBmatcher3.cc  Optimizer.cc  Optimizer1.cc  Optimizer2.cc  Optimizer3.cc  Optimizer4.cc  Optimizer5.cc  Optimizer6.cc  Settings.cc  System.cc  Tracking.cc  Tracking1.cc  Tracking2.cc  Tracking3.cc  Tracking4.cc  Tracking5.cc  TwoViewReconstruction.cc  Viewer.cc
src/Benchmark/: CMakeLists.txt
src/Benchmark/Example/: CMakeLists.txt  Main.cpp
src/Benchmark/include/orb/: Benchmark.h
src/Benchmark/src/: Benchmark.cpp
src/Eden_resources/: CMakeLists.txt  Ngpus_Ncpus.cu
src/HipEdenResources/: CMakeLists.txt  Ngpus_Ncpus.cpp
src/OpenCL/: CMakeLists.txt  Fast.cpp  Manager.cpp  Orb.cpp
src/OpenCL/Kernel/: AddBorder.cl  Angle.cl  Orb.cl  Test.cl  TileCalcKeypoints.cl  shift.cl
src/cuda/: Allocator_gpu.cu  Cuda.cu  Fast_gpu.cu  Orb_gpu.cu
src/cudatest/: CMakeLists.txt  cudatest.cu
test/src/: CMakeLists.txt  OpenCLTest.cpp
tests/: CMakeLists.txt
tool/: CMakeLists.txt
tool/OpenCLTest/: CMakeLists.txt  check_macros.hpp  context_setup.hpp  main.cpp  main0.cpp  main1.cpp
